src/main/java/com/example/demo/dto/errors/BadRequestErrorResponseDto.java
package com.example.demo.dto.errors;

import java.util.List;

public record BadRequestErrorResponseDto(
        String message,
        List<ErrorDetailDto> details
) {}
